fixed gallery-45  text color for dark mode

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -6352,6 +6352,14 @@ body.dark-mode {
   }
 }
 
+@media only screen and (min-width: 0rem){
+  body.dark-mode #gallery-45{
+    .cs-h3,
+    .cs-text{
+      color: #fff;
+    }
+  }
+}
 
 
 /*-- -------------------------- -->
